# alloc-counter

./: CMakeLists.txt  README.md  allocation-stats.cpp  allocation-stats.h  allocation-table.cpp  allocation-table.h  callstack-fingerprint.h  comm-memory.cpp  environment.h  init.cpp  leaking-app.cpp  libmallinfo-log.cpp  library-context.h  mallinfo-plot  memory-protector.cpp  memory-protector.h  parse-mmap-log.py  patrol-thread.cpp  patrol-thread.h  ref-counter.cpp  stack-trace.cpp  stack-trace.h  test-stack-traces.cpp  watched-stack-trace-info.cpp  watched-stack-trace-info.h  wrapper-malloc.cpp  wrapper-malloc.h
alloc-counter/: allocation-stats.cpp  allocation-stats.h  allocation-table.h  comm-memory.cpp  comm-memory.h  init.cpp  memory-protector.cpp  patrol-thread.cpp  watched-stack-trace-info.h
alloc-counter-start/: alloc-counter-start.cpp
common/: environment.cpp  library-context.cpp  stack-trace.h
dummy-lib/: dummy-lib.cpp  dummy-lib.h
mmap-counter/: interned-stack-trace.cpp  interned-stack-trace.h  memory-map.h  mmap-counter.cpp  wrapper-mmap.cpp
mmap-counter-tests/: test-memory-map.cpp
test-mmap/: test-mmap.cpp
